# moonstone

./: .coveragerc  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE  MI_target_cleaned_v3.csv  README.md  mi.counts.csv  pyproject.toml  requirements-dev.txt  requirements.txt  s  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_issue.md
.github/workflows/: coverage.yml  python-package.yml
docs/: .readthedocs.yaml  changelogs.rst  conf.py  index.rst  requirements.txt  why_moonstone.rst
docs/api_docs/: analysis.rst  filtering.rst  normalization.rst  parsers.rst  plot.rst
docs/contribution_guide/: contributing.rst
docs/user_guide/: available_classes.rst  get_started_with_moonstone.rst  getting_started_with_moonstone.rst  installation.rst
metautils/parsers/: base.py  metadata.py  picrust2.py
metautils/utils/: convert.py  print.py
moonstone/: main.py  moonstone.py  version.py
moonstone/analysis/: __init__.py  base.py  classify.py  clustering.py  columns_statistics.py  differential_analysis.py  differentialanalysis.py  randomForest.py  regression.py  statistical_test.py  stats.py
moonstone/core/: module_base.py  plot_base.py
moonstone/dataframe_standardisation/: df_standardisation.py
moonstone/filtering/: ReadFiltering_ComputingThreshold.ipynb  __init__.py  base.py  basics_filtering.py  filtering.py  filtering_by_mean.py  (+4 more)
notebooks/: Metadata Stats and representation.ipynb
tutorial/: Moonstone_Tutorial.ipynb  moonstone_tuto_kraken2_file.tsv  moonstone_tuto_metadata_file.csv
(+182 files in other folders)
