[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "cython>=0.29.21"
]
build-backend = "setuptools.build_meta"

[project]
name = "moonstone"
version = "1.1.0"
description = "Utilities for metagenomics data analysis using machine learning."
authors = [
    { name = "Kenzo-Hugo Hillion" },
    { name = "Agnès Baud", email = "agnes.baud@pasteur.fr" },
    { name = "Mariela Furstenheim" },
    { name = "Sean Kennedy", email = "sean.kennedy@pasteur.fr" }
]
requires-python = ">=3.9,<3.14"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "pandas>=2.0.2",
    "matplotlib>=3.3.0",
    "plotly>=5.17.0",
    "statsmodels>=0.14.0",
    "python-slugify>=4.0.1",
    "pyaml>=20.4.0",
    "numpy>=1.24.3",
    "scikit-bio>=0.5.9",
    "scikit-learn>=1.3.1",
    "hdmedians>=0.14.2",
    "cython>=0.29.21",
    "scipy>=1.9.0"
]

[project.scripts]
moonstone = "moonstone.main:run"

